deployment/k8s/gateway-service.yaml
##################################################################################################
# Gateway service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: gateway
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
        version: v1
    spec:
      containers:
      - name: gateway
        image: vietnamdevsgroup/coolstore-gateway-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
