deployment/k8s/idp-service.yaml
##################################################################################################
# Idp service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: idp-service
  labels:
    app: idp-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: idp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: idp-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: idp
        version: v1
    spec:
      containers:
      - name: idp
        image: vietnamdevsgroup/coolstore-idp-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
