deployment/k8s/inventory-service.yaml
##################################################################################################
# Inventory service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: inventory
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inventory-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
        version: v1
    spec:
      containers:
      - name: inventory
        image: vietnamdevsgroup/coolstore-inventory-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
