deployment/k8s/web.yaml
##################################################################################################
# Web
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
      - name: web
        image: vietnamdevsgroup/coolstore-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
