deployment/k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: coolstore-ingress
  namespace: default
spec:
  backend:
    serviceName: inventory-service
    servicePort: 5000
  rules:
  - http:
      paths:
      - path: /inventory
        backend:
          serviceName: inventory-service
          servicePort: 5000
      - path: /idp
        backend:
          serviceName: idp-service
          servicePort: 5001
